# network-traffic

./: .gitignore  AUTHORS  ChangeLog  HACKING  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  network-traffic.spec.in
data/: Makefile.am  ui.glade
mingw32-extension/: Makefile.am
po/: ChangeLog  LINGUAS  POTFILES.in  pt_BR.po
src/: Makefile.am  functions.cpp  functions.hpp  functions_templates.hpp  i18n.h  i18n.hpp  main.cpp  networkinfo.cpp  networkinfo.h  networkinterface.cpp  networkinterface.h  networkinterface.hpp  nix_networkinterface.cpp  nix_networkinterface.h  nix_networkinterface.hpp  program-info.h  shareddef.c  shareddef.h  ui.glade  win_networkinterface.cpp  win_networkinterface.h  win_networkinterface.hpp  windowsdef.c  windowsdef.h  wndmain.cpp  wndmain.hpp
src/core/: Makefile.am  linux_networkinterface.cpp  linux_networkinterface.hpp  networkinterface.cpp  networkinterface.hpp  nix_networkinterface.hpp  solaris_networkinterface.cpp  solaris_networkinterface.hpp  win_networkinterface.cpp  win_networkinterface.hpp
src/mingw32-extension/: COPYING  Makefile.am  iphlpapi2.h
src/mingw32-extension/lib/: Makefile.am  iphlpapi.def
src/utils/: Makefile.am  functions.cpp  functions.hpp  functions_templates.hpp  i18n.hpp  stdint2.h  windowsdef.c
tests/: Makefile.am
tests/list-interfaces/: Makefile.am  main.cpp
