SUBDIRS = \
	src \
	po

INTLTOOL_FILES = \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

EXTRA_DIST = \
	HACKING \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

CLEANFILES = *~

DISTCLEANFILES = \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	po/.intltool-merge-cache

MAINTAINERCLEANFILES = \
	build-aux/config.guess \
	build-aux/config.sub \
	build-aux/depcomp \
	build-aux/install-sh \
	build-aux/missing \
	aclocal.m4 \
	config.h.in \
	configure \
	Makefile.in \
	autoscan.log \
	configure.scan
