SUBDIRS = \
	src \
	po

INTLTOOL_FILES = \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

EXTRA_DIST = \
	HACKING \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in

CLEANFILES = *~

MAINTAINERCLEANFILES = \
	build-aux/config.guess \
	build-aux/config.sub \
	build-aux/depcomp \
	build-aux/install-sh \
	build-aux/missing \
	po/Makefile.in.in \
	aclocal.m4 \
	config.h.in \
	configure \
	Makefile.in \
	autoscan.log \
	configure.scan \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	po/.intltool-merge-cache
